--- a/index.html
+++ b/index.html
@@ -9,43 +9,56 @@
     <title>Fillme</title>
 </head>
 <body>
-    <div>
-        <label for="first_name">First Name</label>
-        <input type="text" id="first_name" value="" placeholder="Enter your first name" required>
-    </div>
-    <div>
-        <label for="last_name">Last Name</label>
-        <input type="text" id="last_name" value="" placeholder="Enter your last name" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" value="" id="password" placeholder="Enter your password" required>
-    </div>
-    <div>
-        <label for="confirm_password">Confirm Password</label>
-        <input type="password" value="" id="confirm_password" placeholder="Enter your password again" required>
-    </div>
-    <div>
-        <label for="email_id">Email</label>
-        <input type="email" name="" id="email_id" placeholder="Enter your email">
-    </div>
-    <div>
-        <input type="radio" name="ahmedabad" id="ahmedabad">
-        <label for="ahmedabad">Ahmedabad</label>
-        
-        <input type="radio" name="vadodara" id="vadodara">
-        <label for="vadodara">Vadodara</label>
-        
-        <input type="radio" name="gandhinagar" id="gandhinagar">
-        <label for="gandhinagar">Gandhinagar</label>
+    <form method="post">
+        <div>
+            <label for="first_name">First Name</label>
+            <input type="text" id="first_name" value="" placeholder="Enter your first name" required>
+        </div>
+        <div>
+            <label for="last_name">Last Name</label>
+            <input type="text" id="last_name" value="" placeholder="Enter your last name" required>
+        </div>
+        <div>
+            <label for="date_of_birth">DOB</label>
+            <input type="date" id="date_of_birth" required>
+        </div>
+        <div>
+            <label for="password">Password</label>
+            <input type="password" value="" id="password" placeholder="Enter your password" required>
+        </div>
+        <div>
+            <label for="confirm_password">Confirm Password</label>
+            <input type="password" value="" id="confirm_password" placeholder="Enter your password again" required>
+        </div>
+        <div>
+            <label for="email_id">Email</label>
+            <input type="email" name="" id="email_id" placeholder="Enter your email">
+        </div>
+        <div>
+            <fieldset>
+                <legend>Gender</legend>
 
-        <input type="radio" name="bharuch" id="bharuch">
-        <label for="bharuch">Bharuch</label>
+                <input type="radio" id="male" value="m" name="gender">
+                <label for="Male">Male</label>
 
-    </div>
-    <div>
+
+                <input type="radio" id="female" value="f" name="gender">
+                <label for="female">Female</label>
+            </fieldset>
+        </div>
+        <div>
+            <label for="city-select">Select your city</label>
+            <input list="city" id="city-select">
+            <datalist id="city">
+                <option value="Ahmedabad"></option>
+                <option value="Vadodara"></option>
+                <option value="Junagadh"></option>
+                <option value="Gandhinagar"></option>
+                <option value="Bharuch"></option>
+                <option value="Rajkot"></option>
+            </datalist>
+        </div>
         <input type="submit" value="submit" >
-    </div>
-
+    </form>
 </body>
 </html>
